Add dynamic product name support in English and French localization files

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -5,7 +5,7 @@ en:
       troubleshoot: Troubleshoot
     account_sidebar_tabs:
       missing_historical: Missing historical data
-      describe_party_provider: Sure uses third party providers to fetch historical exchange rates, security prices, and more. This data is required to calculate accurate historical account balances.
+      describe_party_provider: "%{product_name} uses third party providers to fetch historical exchange rates, security prices, and more. This data is required to calculate accurate historical account balances."
       configure_provider: Configure your providers here.
       label_all: All
       label_asset: Assets
