--- a/config/locales/views/accounts/fr.yml
+++ b/config/locales/views/accounts/fr.yml
@@ -5,7 +5,7 @@ fr:
       troubleshoot: Dépannage
     account_sidebar_tabs:
       missing_historical: Manque les données historiques
-      describe_party_provider: Sure utilise des fournisseurs tiers pour récupérer l'historique des taux de change, des cours des titres, etc. Ces données sont nécessaires au calcul précis des soldes historiques des comptes.
+      describe_party_provider: "%{product_name} utilise des fournisseurs tiers pour récupérer l'historique des taux de change, des cours des titres, etc. Ces données sont nécessaires au calcul précis des soldes historiques des comptes."
       configure_provider: Configurez vos fournisseurs ici.
       label_all: Tout
       label_asset: Comptes
