--- a/config/locales/views/onboardings/fr.yml
+++ b/config/locales/views/onboardings/fr.yml
@@ -24,4 +24,4 @@ fr:
     show:
       message: Nous sommes vraiment excités que vous soyez ici. Dans la prochaine étape, nous allons vous poser quelques questions pour compléter votre profil et ensuite configurer votre compte.
       setup: Configurer le compte
-      title: Rencontrez Sure
+      title: Rencontrez %{product_name}
