--- a/config/locales/mailers/invitation_mailer/fr.yml
+++ b/config/locales/mailers/invitation_mailer/fr.yml
@@ -1,4 +1,4 @@
 fr:
   invitation_mailer:
     invite_email:
-      subject: "%{inviter} vous a invité à rejoindre sa famille sur Sure !"
+      subject: "%{inviter} vous a invité à rejoindre sa famille sur %{product_name} !"
