--- a/config/locales/views/imports/en.yml
+++ b/config/locales/views/imports/en.yml
@@ -30,18 +30,18 @@ en:
         rows_label: Rows
         unassigned_account: Need to create a new account for unassigned rows?
       show:
-        account_mapping_description: Assign all of your imported file's accounts to
-          Sure's existing accounts.  You can also add new accounts or leave them
-          uncategorized.
+        account_mapping_description: "Assign all of your imported file's accounts to
+          %{product_name}'s existing accounts.  You can also add new accounts or leave them
+          uncategorized."
         account_mapping_title: Assign your accounts
-        account_type_mapping_description: Assign all of your imported file's account
-          types to Sure's
+        account_type_mapping_description: "Assign all of your imported file's account
+          types to %{product_name}'s"
         account_type_mapping_title: Assign your account types
-        category_mapping_description: Assign all of your imported file's categories
-          to Sure's existing categories.  You can also add new categories or leave
-          them uncategorized.
+        category_mapping_description: "Assign all of your imported file's categories
+          to %{product_name}'s existing categories.  You can also add new categories or leave
+          them uncategorized."
         category_mapping_title: Assign your categories
-        tag_mapping_description: Assign all of your imported file's tags to Sure's
+        tag_mapping_description: Assign all of your imported file's tags to %{product_name}'s
           existing tags.  You can also add new tags or leave them uncategorized.
         tag_mapping_title: Assign your tags
     uploads:
