--- a/config/locales/views/imports/fr.yml
+++ b/config/locales/views/imports/fr.yml
@@ -21,18 +21,18 @@ fr:
       mappings:
         create_account: Créer un compte
         csv_mapping_label: "%{mapping} dans le CSV"
-        maybe_mapping_label: "%{mapping} dans Sure"
+        maybe_mapping_label: "%{mapping} dans %{product_name}"
         no_accounts: Vous n'avez pas encore de comptes. Veuillez créer un compte que nous pouvons utiliser pour les lignes non affectées de votre CSV ou retournez à l'étape Nettoyer et fournissez un nom de compte que nous pouvons utiliser.
         rows_label: Lignes
         unassigned_account: Avez-vous besoin de créer un nouveau compte pour les lignes non affectées?
       show:
-        account_mapping_description: Affectez tous les comptes de votre fichier importé aux comptes Sure existants. Vous pouvez également ajouter de nouveaux comptes ou les laisser sans catégorie.
+        account_mapping_description: "Affectez tous les comptes de votre fichier importé aux comptes %{product_name} existants. Vous pouvez également ajouter de nouveaux comptes ou les laisser sans catégorie."
         account_mapping_title: Attribuez vos comptes
-        account_type_mapping_description: Attribuez tous les types de comptes importés dans votre fichier à Sure
+        account_type_mapping_description: Attribuez tous les types de comptes importés dans votre fichier à %{product_name}
         account_type_mapping_title: Attribuez vos types de comptes
-        category_mapping_description: Attribuez toutes les catégories importées dans votre fichier aux catégories existantes de Sure. Vous pouvez également ajouter de nouvelles catégories ou les laisser non catégorisées.
+        category_mapping_description: Attribuez toutes les catégories importées dans votre fichier aux catégories existantes de %{product_name}. Vous pouvez également ajouter de nouvelles catégories ou les laisser non catégorisées.
         category_mapping_title: Attribuez vos catégories
-        tag_mapping_description: Attribuez toutes les étiquettes importées dans votre fichier aux étiquettes existantes de Sure. Vous pouvez également ajouter de nouvelles étiquettes ou les laisser non catégorisées.
+        tag_mapping_description: Attribuez toutes les étiquettes importées dans votre fichier aux étiquettes existantes de %{product_name}. Vous pouvez également ajouter de nouvelles étiquettes ou les laisser non catégorisées.
         tag_mapping_title: Attribuez vos étiquettes
     uploads:
       show:
