--- a/config/locales/views/invitations/en.yml
+++ b/config/locales/views/invitations/en.yml
@@ -15,5 +15,5 @@ en:
       role_label: Role
       role_member: Member
       submit: Send Invitation
-      subtitle: Send an invitation to join your family account on Sure
+      subtitle: Send an invitation to join your family account on %{product_name}
       title: Invite Someone
