--- a/config/locales/views/subscriptions/fr.yml
+++ b/config/locales/views/subscriptions/fr.yml
@@ -1,3 +1,3 @@
 fr:
   subscriptions:
-    self_hosted_alert: "Sure+ n'est pas disponible en mode auto-hébergé."
+    self_hosted_alert: "%{product_name} n'est pas disponible en mode auto-hébergé."
