Add onboarding state selector for self-hosted signup (#251)
* Add onboarding modes to self-hosted signup

* Style form consistently

* Configure ONBOARDING_STATE via ENV

--- a/config/locales/views/settings/hostings/en.yml
+++ b/config/locales/views/settings/hostings/en.yml
@@ -15,9 +15,8 @@ en:
           closed: Closed
           invite_only: Invite-only
       show:
-        general: General Settings
-        financial_data_providers: Financial Data Providers
-        invites: Invite Codes
+        general: External Services
+        invites: Onboarding
         title: Self-Hosting
         danger_zone: Danger Zone
         clear_cache: Clear data cache
