Update pages/dashboard locales

--- a/config/locales/views/pages/ca.yml
+++ b/config/locales/views/pages/ca.yml
@@ -2,13 +2,30 @@
 ca:
   pages:
     changelog:
-      title: Novetats
+      title: "Novetats"
     dashboard:
+      welcome: "Benvingut/da de nou, %{name}"
+      subtitle: "Això és el que està passant amb les teves finances"
+      new: "Nou"
       net_worth_chart:
-        data_not_available: No hi ha dades disponibles per al període seleccionat
-        title: Patrimoni net
+        data_not_available: "Dades no disponibles per al període seleccionat"
+        title: "Patrimoni net"
       no_account_empty_state:
-        new_account: Nou compte
-        no_account_subtitle: Com que no s'ha afegit cap compte, no hi ha dades per mostrar. Afegeix els teus primers comptes per començar a veure dades al tauler.
-        no_account_title: Encara no hi ha cap compte
-
+        new_account: "Nou compte"
+        no_account_subtitle: "Com que no s'ha afegit cap compte, no hi ha dades per mostrar. Afegeix els teus primers comptes per començar a veure dades al tauler."
+        no_account_title: "Encara no hi ha comptes"
+      balance_sheet:
+        no_items: "Encara no hi ha %{name}"
+        add_accounts: "Afegeix els teus comptes de %{name} per veure'n el detall complet"
+      cashflow_sankey:
+        title: "Flux de caixa"
+        no_data_title: "No hi ha dades de flux de caixa per a aquest període de temps"
+        no_data_description: "Afegeix transaccions per mostrar dades de flux de caixa o amplia el període de temps"
+        add_transaction: "Afegeix una transacció"
+      no_accounts:
+        title: "Encara no hi ha comptes"
+        description: "Afegeix comptes per mostrar dades de patrimoni net"
+        add_account: "Afegeix un compte"
+      outflows_donut:
+        title: "Sortides"
+        total_outflows: "Total sortides"
