Feature/yahoo finance (#123)
* Implement Yahoo Finance

* Added tests

* Updated hosting controller to check for managed app_mode instead of env_override

* Suggestions from CodeRabbit and Fixes on tests

* Remove Css changes

* Fix yahoo finance impl and i18n

* Updated view to use healthy method

* remove usage

* Updated env example

* keep usage on class just to keep same format

* Ci test

* Remove some useless validations

* Remove logs

* Linter fixes

* Broke this in my conflict merge

* Wrong indentation level

---------

Signed-off-by: Juan José Mata <juanjo.mata@gmail.com>
Co-authored-by: Juan José Mata <juanjo.mata@gmail.com>

--- a/config/locales/views/settings/hostings/en.yml
+++ b/config/locales/views/settings/hostings/en.yml
@@ -15,8 +15,9 @@ en:
           closed: Closed
           invite_only: Invite-only
       show:
-        general: External Services
-        invites: Onboarding
+        general: General Settings
+        financial_data_providers: Financial Data Providers
+        invites: Invite Codes
         title: Self-Hosting
         danger_zone: Danger Zone
         clear_cache: Clear data cache
