--- a/config/locales/views/lunchflow_items/en.yml
+++ b/config/locales/views/lunchflow_items/en.yml
@@ -11,9 +11,13 @@ en:
       loading_message: Loading Lunchflow accounts...
       loading_title: Loading
     link_accounts:
+      all_already_linked:
+        one: "The selected account (%{names}) is already linked"
+        other: "All %{count} selected accounts are already linked: %{names}"
       api_error: "API error: %{message}"
       link_failed: Failed to link accounts
       no_accounts_selected: Please select at least one account
+      partial_success: "Successfully linked %{created_count} account(s). %{already_linked_count} account(s) were already linked: %{already_linked_names}"
       success:
         one: "Successfully linked %{count} account"
         other: "Successfully linked %{count} accounts"
