Lunch flow improvements
- Add support to link existing account with lunch-flow
The account will be promoted to a lunch flow connection now
( TBD if we want to allow un-linking? )
- Add support for proper de-dup at provider import level. This will handle de-dups for Lunch Flow, Plaid and SimpleFIN
- Fix plaid account removal on invalid credentials

--- a/config/locales/views/lunchflow_items/en.yml
+++ b/config/locales/views/lunchflow_items/en.yml
@@ -39,6 +39,24 @@ en:
       no_accounts_found: No accounts found. Please check your API key configuration.
       no_api_key: Lunch Flow API key is not configured. Please configure it in Settings.
       title: Select Lunch Flow Accounts
+    select_existing_account:
+      account_already_linked: This account is already linked to a provider
+      all_accounts_already_linked: All Lunch Flow accounts are already linked
+      api_error: "API error: %{message}"
+      cancel: Cancel
+      description: Select a Lunch Flow account to link with this account. Transactions will be synced and deduplicated automatically.
+      link_account: Link account
+      no_account_specified: No account specified
+      no_accounts_found: No Lunch Flow accounts found. Please check your API key configuration.
+      no_api_key: Lunch Flow API key is not configured. Please configure it in Settings.
+      title: "Link %{account_name} with Lunch Flow"
+    link_existing_account:
+      account_already_linked: This account is already linked to a provider
+      api_error: "API error: %{message}"
+      lunchflow_account_already_linked: This Lunch Flow account is already linked to another account
+      lunchflow_account_not_found: Lunch Flow account not found
+      missing_parameters: Missing required parameters
+      success: "Successfully linked %{account_name} with Lunch Flow"
     sync:
       success: Sync started
     update:
