--- a/config/locales/views/reports/en.yml
+++ b/config/locales/views/reports/en.yml
@@ -31,6 +31,7 @@ en:
       net_savings: Net Savings
       current: Current Period
       previous: Previous Period
+      no_data: No data available
     budget_performance:
       title: Budget Performance
       spent: Spent
