Add support for google sheets
Remove pdf and xlsx for now

--- a/config/locales/views/reports/en.yml
+++ b/config/locales/views/reports/en.yml
@@ -99,6 +99,7 @@ en:
         csv: CSV
         excel: Excel
         pdf: PDF
+        google_sheets: Open in Google Sheets
       table:
         category: Category
         amount: Amount
