--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -8,6 +8,8 @@ en:
       email_change_initiated: Please check your new email address for confirmation
         instructions.
       success: Your profile has been updated.
+    resend_confirmation_email:
+      success: A new confirmation email is queued to be sent.
     reset:
       success: Your account has been reset. Data will be deleted in the background in some time.
       unauthorized: You are not authorized to perform this action
