--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -105,7 +105,7 @@ en:
       other_section_title: More
       preferences_label: Preferences
       profile_label: Profile Info
-      recurring_transactions_label: Recurring
+      recurring_transactions_label: Recurring Transactions
       rules_label: Rules
       security_label: Security
       self_hosting_label: Self-Hosting
