--- a/config/locales/views/imports/de.yml
+++ b/config/locales/views/imports/de.yml
@@ -3,15 +3,15 @@ de:
   import:
     cleans:
       show:
-        description: Bearbeite deine Daten in der Tabelle unten Rote Zellen sind ungültig
-        errors_notice: Deine Daten enthalten Fehler Fahre mit der Maus über den Fehler um Details zu sehen
-        errors_notice_mobile: Deine Daten enthalten Fehler Tippe auf den Fehler Tooltip um Details zu sehen
+        description: Bearbeite deine Daten in der Tabelle unten. Rote Zellen sind ungültig.
+        errors_notice: Deine Daten enthalten Fehler. Fahre mit der Maus über den Fehler, um Details zu sehen.
+        errors_notice_mobile: Deine Daten enthalten Fehler. Tippe auf den Fehler-Tooltip, um Details zu sehen.
         title: Daten bereinigen
     configurations:
       mint_import:
         date_format_label: Datumsformat
       show:
-        description: Wähle die Spalten aus die den jeweiligen Feldern in deiner CSV entsprechen
+        description: Wähle die Spalten aus, die den jeweiligen Feldern in deiner CSV entsprechen.
         title: Import konfigurieren
       trade_import:
         date_format_label: Datumsformat
@@ -21,31 +21,31 @@ de:
       mappings:
         create_account: Konto erstellen
         csv_mapping_label: "%{mapping} in CSV"
-        maybe_mapping_label: "%{mapping} in Maybe"
-        no_accounts: Du hast noch keine Konten Bitte erstelle ein Konto das wir für nicht zugewiesene Zeilen in deiner CSV verwenden können oder gehe zurück zum Bereinigungsschritt und gib dort einen Kontonamen an
+        sure_mapping_label: "%{mapping} in %{product_name}"
+        no_accounts: Du hast noch keine Konten. Bitte erstelle ein Konto, das wir für nicht zugewiesene Zeilen in deiner CSV verwenden können, oder gehe zurück zum Bereinigungsschritt und gib dort einen Kontonamen an.
         rows_label: Zeilen
-        unassigned_account: Neues Konto für nicht zugewiesene Zeilen erstellen
+        unassigned_account: Neues Konto für nicht zugewiesene Zeilen erstellen?
       show:
-        account_mapping_description: Weise alle Konten aus deiner importierten Datei den bestehenden Konten in Maybe zu Du kannst auch neue Konten hinzufügen oder sie ohne Kategorie lassen
+        account_mapping_description: Weise alle Konten aus deiner importierten Datei den bestehenden Konten in %{product_name} zu. Du kannst auch neue Konten hinzufügen oder sie ohne Kategorie lassen.
         account_mapping_title: Konten zuweisen
-        account_type_mapping_description: Weise alle Kontotypen aus deiner importierten Datei den Kontotypen in Maybe zu
+        account_type_mapping_description: Weise alle Kontotypen aus deiner importierten Datei den Kontotypen in %{product_name} zu.
         account_type_mapping_title: Kontotypen zuweisen
-        category_mapping_description: Weise alle Kategorien aus deiner importierten Datei den bestehenden Kategorien in Maybe zu Du kannst auch neue Kategorien hinzufügen oder sie ohne Kategorie lassen
+        category_mapping_description: Weise alle Kategorien aus deiner importierten Datei den bestehenden Kategorien in %{product_name} zu. Du kannst auch neue Kategorien hinzufügen oder sie ohne Kategorie lassen.
         category_mapping_title: Kategorien zuweisen
-        tag_mapping_description: Weise alle Tags aus deiner importierten Datei den bestehenden Tags in Maybe zu Du kannst auch neue Tags hinzufügen oder sie ohne Kategorie lassen
+        tag_mapping_description: Weise alle Tags aus deiner importierten Datei den bestehenden Tags in %{product_name} zu. Du kannst auch neue Tags hinzufügen oder sie ohne Kategorie lassen.
         tag_mapping_title: Tags zuweisen
     uploads:
       show:
-        description: Füge unten deine CSV-Datei ein oder lade sie hoch Bitte lies die Anweisungen in der Tabelle unten bevor du beginnst
-        instructions_1: Unten ist ein Beispiel einer CSV-Datei mit verfügbaren Spalten für den Import
-        instructions_2: Deine CSV muss eine Kopfzeile enthalten
-        instructions_3: Du kannst deine Spalten beliebig benennen Die Zuordnung erfolgt in einem späteren Schritt
-        instructions_4: Spalten mit einem Sternchen (*) sind Pflichtfelder
-        instructions_5: Keine Kommas keine Währungssymbole und keine Klammern in Zahlen verwenden
+        description: Füge unten deine CSV-Datei ein oder lade sie hoch. Bitte lies die Anweisungen in der Tabelle unten, bevor du beginnst.
+        instructions_1: Unten siehst du ein Beispiel einer CSV-Datei mit verfügbaren Spalten für den Import.
+        instructions_2: Deine CSV muss eine Kopfzeile enthalten.
+        instructions_3: Du kannst deine Spalten beliebig benennen. Die Zuordnung erfolgt in einem späteren Schritt.
+        instructions_4: Spalten mit einem Sternchen (*) sind Pflichtfelder.
+        instructions_5: Keine Kommas, Währungssymbole oder Klammern in Zahlen verwenden.
         title: Daten importieren
   imports:
     empty:
-      message: Noch keine Importe vorhanden
+      message: Noch keine Importe vorhanden.
       new: Neuer Import
     import:
       complete: Abgeschlossen
@@ -60,19 +60,19 @@ de:
     index:
       imports: Importe
       new: Neuer Import
-      title: Import Export
+      title: Import/Export
       exports: Exporte
       new_export: Neuer Export
-      no_exports: Noch keine Exporte vorhanden
+      no_exports: Noch keine Exporte vorhanden.
     new:
-      description: Du kannst verschiedene Datentypen manuell über CSV importieren oder eine unserer Importvorlagen wie Mint verwenden
+      description: Du kannst verschiedene Datentypen manuell über CSV importieren oder eine unserer Importvorlagen wie Mint verwenden.
       import_accounts: Konten importieren
       import_mint: Von Mint importieren
       import_portfolio: Investitionen importieren
       import_transactions: Transaktionen importieren
       resume: "%{type} fortsetzen"
       sources: Quellen
-      title: Neuer CSV Import
+      title: Neuer CSV-Import
     ready:
-      description: Hier ist eine Zusammenfassung der neuen Elemente die deinem Konto hinzugefügt werden sobald du diesen Import veröffentlichst
+      description: Hier ist eine Zusammenfassung der neuen Elemente, die deinem Konto hinzugefügt werden, sobald du diesen Import veröffentlichst.
       title: Importdaten bestätigen
