--- a/config/locales/views/mfa/de.yml
+++ b/config/locales/views/mfa/de.yml
@@ -18,13 +18,13 @@ de:
       description: Erhöhe die Sicherheit deines Kontos durch Aktivierung der Zwei-Faktor-Authentifizierung
       page_title: Einrichtung der Zwei-Faktor-Authentifizierung
       scan_description: Verwende eine Authenticator-App wie Google Authenticator oder 1Password um diesen QR-Code zu scannen
-      scan_title: 1 QR-Code scannen
+      scan_title: 1. QR-Code scannen
       secret_description: Wenn du den QR-Code nicht scannen kannst gib diesen geheimen Schlüssel manuell in deiner Authenticator-App ein
       secret_title: Manueller Eingabecode
       title: Zwei-Faktor-Authentifizierung einrichten
       verify_button: Code überprüfen und 2FA aktivieren
       verify_description: Gib den 6-stelligen Code aus deiner Authenticator-App ein
-      verify_title: 2 Bestätigungscode eingeben
+      verify_title: 2. Bestätigungscode eingeben
     verify:
       description: Gib den Code aus deiner Authenticator-App ein um fortzufahren
       page_title: Zwei-Faktor-Authentifizierung überprüfen
