--- a/config/locales/views/password_resets/de.yml
+++ b/config/locales/views/password_resets/de.yml
@@ -4,10 +4,10 @@ de:
     edit:
       title: Passwort zurücksetzen
     new:
-      requested: Bitte überprüfe deine E-Mails auf einen Link zum Zurücksetzen deines Passworts
+      requested: Bitte überprüfe deine E-Mails auf einen Link zum Zurücksetzen deines Passworts.
       submit: Passwort zurücksetzen
       title: Passwort zurücksetzen
       back: Zurück
     update:
-      invalid_token: Ungültiger Token
-      success: Dein Passwort wurde zurückgesetzt
+      invalid_token: Ungültiger Token.
+      success: Dein Passwort wurde zurückgesetzt.
