--- a/config/locales/views/registrations/en.yml
+++ b/config/locales/views/registrations/en.yml
@@ -22,5 +22,5 @@ en:
       title: Create your account
       welcome_body: To get started, you must sign up for a new account.  You will
         then be able to configure additional settings within the app.
-      welcome_title: Welcome to Self Hosted Maybe!
+      welcome_title: Welcome to Self Hosted %{product_name}!
       password_placeholder: Enter your password
