--- a/config/locales/views/transfers/de.yml
+++ b/config/locales/views/transfers/de.yml
@@ -19,11 +19,11 @@ de:
       title: Neue Überweisung
     show:
       delete: Überweisung entfernen
-      delete_subtitle: Dadurch wird die Überweisung entfernt Die zugrunde liegenden Transaktionen bleiben erhalten
-      delete_title: Überweisung entfernen
+      delete_subtitle: Dadurch wird die Überweisung entfernt. Die zugrunde liegenden Transaktionen bleiben erhalten.
+      delete_title: Überweisung entfernen?
       details: Details
       note_label: Notizen
-      note_placeholder: Füge dieser Überweisung eine Notiz hinzu
+      note_placeholder: Füge dieser Überweisung eine Notiz hinzu …
       overview: Übersicht
       settings: Einstellungen
     update:
