--- a/config/locales/views/recurring_transactions/en.yml
+++ b/config/locales/views/recurring_transactions/en.yml
@@ -22,6 +22,8 @@ en:
     marked_active: Recurring transaction marked as active
     deleted: Recurring transaction deleted
     confirm_delete: Are you sure you want to delete this recurring transaction?
+    marked_as_recurring: Transaction marked as recurring
+    already_exists: A manual recurring transaction already exists for this pattern
     empty:
       title: No recurring transactions found
       description: Click "Identify Patterns" to automatically detect recurring transactions from your transaction history.
