--- a/config/locales/views/simplefin_items/en.yml
+++ b/config/locales/views/simplefin_items/en.yml
@@ -45,3 +45,8 @@ en:
       status_with_summary: "Last synced %{timestamp} ago • %{summary}"
       syncing: Syncing...
       update: Update connection
+    select_existing_account:
+      title: "Link %{account_name} to SimpleFIN"
+      description: Select a SimpleFIN account to link to your existing account
+      cancel: Cancel
+      link_account: Link account
