--- a/config/locales/mailers/invitation_mailer/es.yml
+++ b/config/locales/mailers/invitation_mailer/es.yml
@@ -2,4 +2,4 @@
 es:
   invitation_mailer:
     invite_email:
-      subject: "¡%{inviter} te ha invitado a unirte a su hogar en %{product_name}!"
+      subject: "¡%{inviter} te ha invitado a unirte a su cuenta de %{product_name}!"
